harish-first commit

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -25,7 +25,7 @@
     </li>
     {% empty %}
     <li class="list-group-item d-flex justify-content-between align-items-center">
-      You have not created any tree yet...
+      <b>You have not created any tree yet...,</b>
     </li>
     {% endfor %}
   </ul>
